--- a/style.css
+++ b/style.css
@@ -1,1 +1,45 @@
-
+body{
+  font-family: Arial, sans-serif;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-item: center;
+  height:100vh;
+  color: #333;
+  margin: 0;
+  padding: 0;
+}
+.container{
+  width: 50%;
+  background-color: white;
+  box-sizing: border-box;
+  padding: 20px;
+}
+h1{
+  color: #4CAF50;
+  text-align: center;
+}
+.form-group{
+  margin-bottom: 15px;
+}
+label{
+  font-size: 16px;
+  font-weight: bold;
+}
+input[type = "text"], input[type="number"],
+select{
+  padding: 10px;
+  margin: 5px 0;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+button{
+  background-color: #4CAF50;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+button:hover{
+  background-color: #45a049;
+}
